--- a/public/layout.html
+++ b/public/layout.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>My Website</title>
-  <link rel="stylesheet" href="/styles.css">
-</head>
-<body>
-  <div id="navbar"></div>
-  <main id="content"></main>
-
-  <script src="/scripts/layout.js"></script>
-</body>
+	<head>
+	  <meta charset="UTF-8">
+	  <title>My Website</title>
+	  <link rel="stylesheet" href="/styles.css">
+	</head>
+	<body>
+	  <div id="navbar"></div>
+	  <main id="content"></main>
+		<script src="scripts/layout.js"></script>
+	</body>
 </html>
