--- a/public/layout.html
+++ b/public/layout.html
@@ -3,7 +3,10 @@
 	<head>
 	  <meta charset="UTF-8">
 	  <title>My Website</title>
-	  <link rel="stylesheet" href="/styles.css">
+	  <link rel="stylesheet" href="styles/layout.css">
+	  <link rel="stylesheet" href="styles/navbar.css">
+	  <link rel="stylesheet" href="styles/downloads.css">
+	  <link rel="stylesheet" href="styles/register.css">
 	</head>
 	<body>
 	  <div id="navbar"></div>
