--- a/public/layout.html
+++ b/public/layout.html
@@ -1,3 +1,5 @@
+<!-- layout.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -23,8 +25,12 @@
   <main id="content"></main>
 
   <!-- Scripts -->
+
   <script src="/scripts/navbar.js"></script>
   <script src="/scripts/login.js"></script>
+  <script src="/scripts/register.js"></script>
+  <script src="/scripts/downloads.js"></script>
   <script src="/scripts/layout.js"></script>
+
 </body>
 </html>
