--- a/public/layout.html
+++ b/public/layout.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/styles/layout.css">
   <link rel="stylesheet" href="/styles/navbar.css">
   <link rel="stylesheet" href="/styles/login.css">
+  <link rel="stylesheet" href="/styles/downloads.css">
 </head>
 
 <body>
